k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector: # tells the deployment which pods we want to control
    matchLabels: # key value pair must be identical to the template metadata labels
      component: web
  template: # a pod template
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: stephengrider/multi-client
          ports:
            - containerPort: 3000
