k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes: # asks for amount of storage
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts: # volumes section must be specified
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data # it's designating where inside the container this storage should be made available
              subPath: postgres # if we opened up the persistent volume we will see that all the data saved to /var/lib/postgresql/data is nested inside a folder called postgres
