k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # specifies higher level configuration
    kubernetes.io/ingress.class: nginx # this line is telling kubernetes that we want to create an Ingress controller based on the nginx project
    # the following line is going to configure how the actual copy of nginx behaves
    # it will work on removing the /api from the incoming requests
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
